[gd_scene load_steps=7 format=3 uid="uid://ct0n71ycjekrv"]

[ext_resource type="Script" path="res://scenes/new_game_menu.gd" id="1_jh6eh"]
[ext_resource type="Theme" uid="uid://cybssocn771kw" path="res://theme.tres" id="2_nn4xm"]
[ext_resource type="PackedScene" uid="uid://cbtcuhi1yip6y" path="res://scenes/ct.tscn" id="3_508ne"]
[ext_resource type="PackedScene" uid="uid://bm1ui55agqjpl" path="res://scenes/accept_back.tscn" id="4_rkiws"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gichw"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.0980392, 0.152941, 0.105882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gcgwq"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.435294, 0.435294, 0.435294, 1)

[node name="NewGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jh6eh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -331.5
offset_right = 384.0
offset_bottom = 331.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_nn4xm")
theme_override_styles/panel = SubResource("StyleBoxFlat_gichw")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="CTDifficulty" parent="PanelContainer/VBoxContainer/GridContainer" instance=ExtResource("3_508ne")]
layout_mode = 2

[node name="CTGalaxySize" parent="PanelContainer/VBoxContainer/GridContainer" instance=ExtResource("3_508ne")]
layout_mode = 2

[node name="CTGalaxyAge" parent="PanelContainer/VBoxContainer/GridContainer" instance=ExtResource("3_508ne")]
layout_mode = 2

[node name="CTPlayers" parent="PanelContainer/VBoxContainer/GridContainer" instance=ExtResource("3_508ne")]
layout_mode = 2

[node name="CTTechLevel" parent="PanelContainer/VBoxContainer/GridContainer" instance=ExtResource("3_508ne")]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gcgwq")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/GridContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TacticalCombat" type="CheckBox" parent="PanelContainer/VBoxContainer/GridContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Tactical Combat"

[node name="AntaranAttacks" type="CheckBox" parent="PanelContainer/VBoxContainer/GridContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Antaran Attacks"

[node name="RandomEvents" type="CheckBox" parent="PanelContainer/VBoxContainer/GridContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Random Events"

[node name="AcceptBack" parent="PanelContainer/VBoxContainer" instance=ExtResource("4_rkiws")]
layout_mode = 2

[connection signal="accept_pressed" from="PanelContainer/VBoxContainer/AcceptBack" to="." method="_on_accept"]
